new confirm booking email

--- a/app/views/user_mailer/confirm_booking.html.erb
+++ b/app/views/user_mailer/confirm_booking.html.erb
@@ -622,7 +622,7 @@
                             <td class="mcnImageContent" valign="top" style="padding-right: 9px; padding-left: 9px; padding-top: 0; padding-bottom: 0; text-align:center;">
 
 
-                                        <img align="center" alt="" src="https://gallery.mailchimp.com/0cf9ba96d0948821f414239a9/images/89ade08a-2791-4f5a-9646-52fe1348f940.jpg" width="549" style="max-width:549px; padding-bottom: 0; display: inline !important; vertical-align: bottom;" class="mcnImage">
+                                        <img align="center" alt="" src="https://gallery.mailchimp.com/0cf9ba96d0948821f414239a9/images/eb9fe655-9676-403f-80fe-879f10d5bb9c.png" width="564" style="max-width:1190px; padding-bottom: 0; display: inline !important; vertical-align: bottom;" class="mcnImage">
 
 
                             </td>
@@ -648,7 +648,7 @@
 
                         <td valign="top" class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
 
-                            <div style="text-align: center;"><span style="font-size:22px"><strong><%= @user.first_name %>, you are almost there !! </strong></span></div>
+                            <div style="text-align: center;"><span style="font-size:22px"><strong> <%= @user.first_name %> , you are almost there&nbsp;!!!</strong></span></div>
 
                         </td>
                     </tr>
@@ -663,24 +663,6 @@
         <![endif]-->
             </td>
         </tr>
-    </tbody>
-</table><table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnImageBlock" style="min-width:100%;">
-    <tbody class="mcnImageBlockOuter">
-            <tr>
-                <td valign="top" style="padding:9px" class="mcnImageBlockInner">
-                    <table align="left" width="100%" border="0" cellpadding="0" cellspacing="0" class="mcnImageContentContainer" style="min-width:100%;">
-                        <tbody><tr>
-                            <td class="mcnImageContent" valign="top" style="padding-right: 9px; padding-left: 9px; padding-top: 0; padding-bottom: 0; text-align:center;">
-
-
-                                        <img align="center" alt="" src="https://gallery.mailchimp.com/0cf9ba96d0948821f414239a9/images/eb9fe655-9676-403f-80fe-879f10d5bb9c.png" width="564" style="max-width:1190px; padding-bottom: 0; display: inline !important; vertical-align: bottom;" class="mcnImage">
-
-
-                            </td>
-                        </tr>
-                    </tbody></table>
-                </td>
-            </tr>
     </tbody>
 </table></td>
                             </tr>
@@ -739,8 +721,8 @@
 
                         <td valign="top" class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
 
-                            <div style="text-align: center;"><strong>From</strong> : <%= @booking.begin_date %> | <strong>To</strong> : <%= @booking.end_date %><br>
-<strong>Number of guests&nbsp;</strong>: <%= @booking.member_of_people %></div>
+                            <div style="text-align: center;"><strong>From</strong> : <%= @booking.begin_date %> | <strong>To</strong> : <%= @booking.end_date %> <br>
+<strong>Number of guests&nbsp;</strong>: <%= @booking.member_of_people %> </div>
 
                         </td>
                     </tr>
@@ -940,7 +922,7 @@ Connect to the <a href="https://www.linkedin.com/search/results/people/?facetCur
                             <table border="0" cellspacing="0" class="mcnTextContentContainer" width="100%" style="min-width: 100% !important;background-color: #404040;">
                                 <tbody><tr>
                                     <td valign="top" class="mcnTextContent" style="padding: 18px;color: #F2F2F2;font-family: Helvetica;font-size: 14px;font-weight: normal;text-align: center;">
-                                        <span style="font-size:14px"><strong>When it's done say a kind Hello! to our Whatsapp (+33 665723467).</strong></span><br>
+                                        <span style="font-size:14px"><strong>When it's done you will get your check in email by one member of our Tribe.</strong></span><br>
 <br>
 See you soon <%= @user.first_name %> !!!
                                     </td>
