--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -31,7 +31,7 @@
 </script> -->
 <div class = "banner">
 <iframe id="ytplayer" type="text/html" width="700" height="390"
-  src="http://www.youtube.com/embed/CWWu348ub5c"
+  src="http://www.youtube.com/embed/_0iQZU_NUgc"
   frameborder="0"/> </iframe>
 </div>
 
