--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
     <meta property="og:title" content="Spores Homes | Well Being and Self-learning homes">
     <meta property="og:type" content="article">
     <meta property="og:url" content="http://www.spores-homes.com/">
-    <meta property="og:image" content="http://res.cloudinary.com/dk9kkvy1o/image/upload/v1523900331/4b73ed3d43e8560bc0e9136ebd608b7a_original_a5gj6k.png">
+    <meta property="og:image" content="http://res.cloudinary.com/dk9kkvy1o/image/upload/v1525972886/photo-146938463v1720-500a19caf2be_1_qtja6q.jpg">
     <meta property="og:description" content="There are homes in the world that the key to enter is your personality, not your wallet. Discover the revolution of living.">
     <meta property="og:site_name" content="Spores Homes ">
 
