--- a/app/views/user_mailer/review.html.erb
+++ b/app/views/user_mailer/review.html.erb
@@ -14,7 +14,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>*|MC:SUBJECT|*</title>
-        
+
     <style type="text/css">
     p{
       margin:10px 0;
@@ -513,11 +513,11 @@
                     <table align="left" width="100%" border="0" cellpadding="0" cellspacing="0" class="mcnImageContentContainer" style="min-width:100%;">
                         <tbody><tr>
                             <td class="mcnImageContent" valign="top" style="padding-right: 9px; padding-left: 9px; padding-top: 0; padding-bottom: 0; text-align:center;">
-                                
-                                    
+
+
                                         <img align="center" alt="" src="https://gallery.mailchimp.com/0cf9ba96d0948821f414239a9/images/a81c5a42-55e9-474c-a6d4-9bb1afac8c04.jpg" width="400" style="max-width:400px; padding-bottom: 0; display: inline !important; vertical-align: bottom;" class="mcnImage">
-                                    
-                                
+
+
                             </td>
                         </tr>
                     </tbody></table>
@@ -532,16 +532,16 @@
         <table align="left" border="0" cellspacing="0" cellpadding="0" width="100%" style="width:100%;">
         <tr>
         <![endif]-->
-          
+
         <!--[if mso]>
         <td valign="top" width="600" style="width:600px;">
         <![endif]-->
                 <table align="left" border="0" cellpadding="0" cellspacing="0" style="max-width:100%; min-width:100%;" width="100%" class="mcnTextContentContainer">
                     <tbody><tr>
-                        
+
                         <td valign="top" class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
-                        
-                            <h3 style="text-align: center;"><span style="color:#ad6155"><strong>@user.first_name, how was your experience ?</strong></span></h3>
+
+                            <h3 style="text-align: center;"><span style="color:#ad6155"><strong> <%= @user.first_name %>, how was your experience ?</strong></span></h3>
 
                         </td>
                     </tr>
@@ -549,7 +549,7 @@
         <!--[if mso]>
         </td>
         <![endif]-->
-                
+
         <!--[if mso]>
         </tr>
         </table>
@@ -565,15 +565,15 @@
         <table align="left" border="0" cellspacing="0" cellpadding="0" width="100%" style="width:100%;">
         <tr>
         <![endif]-->
-          
+
         <!--[if mso]>
         <td valign="top" width="600" style="width:600px;">
         <![endif]-->
                 <table align="left" border="0" cellpadding="0" cellspacing="0" style="max-width:100%; min-width:100%;" width="100%" class="mcnTextContentContainer">
                     <tbody><tr>
-                        
+
                         <td valign="top" class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
-                        
+
                             <div style="text-align: center;"><span style="font-size:14px">1️⃣Leave a review and share your experience <a href="http://www.spores-homes.com/flats/14/reviews/new" target="_blank">here</a>.<br>
 <br>
 2️⃣ Through&nbsp;social medias with <a href="https://www.instagram.com/explore/tags/sporeshomes/?hl=en" target="_blank">#sporeshomes</a><br>
@@ -589,7 +589,7 @@ If you think you should contribute to such social business to be&nbsp;sustainabl
         <!--[if mso]>
         </td>
         <![endif]-->
-                
+
         <!--[if mso]>
         </tr>
         </table>
@@ -608,7 +608,7 @@ If you think you should contribute to such social business to be&nbsp;sustainabl
                         </td>
                     </tr>
                 </tbody></table>
-<!--            
+<!--
                 <td class="mcnDividerBlockInner" style="padding: 18px;">
                 <hr class="mcnDividerContent" style="border-bottom-color:none; border-left-color:none; border-right-color:none; border-bottom-width:0; border-left-width:0; border-right-width:0; margin-top:0; margin-right:0; margin-bottom:0; margin-left:0;" />
 -->
@@ -639,15 +639,15 @@ If you think you should contribute to such social business to be&nbsp;sustainabl
         <table align="left" border="0" cellspacing="0" cellpadding="0" width="100%" style="width:100%;">
         <tr>
         <![endif]-->
-          
+
         <!--[if mso]>
         <td valign="top" width="600" style="width:600px;">
         <![endif]-->
                 <table align="left" border="0" cellpadding="0" cellspacing="0" style="max-width:100%; min-width:100%;" width="100%" class="mcnTextContentContainer">
                     <tbody><tr>
-                        
+
                         <td valign="top" class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
-                        
+
                             <div style="text-align: center;"><span style="font-size:12px">It works from 0.01€.&nbsp;Don't be shy.</span></div>
 
                         </td>
@@ -656,7 +656,7 @@ If you think you should contribute to such social business to be&nbsp;sustainabl
         <!--[if mso]>
         </td>
         <![endif]-->
-                
+
         <!--[if mso]>
         </tr>
         </table>
@@ -681,47 +681,47 @@ If you think you should contribute to such social business to be&nbsp;sustainabl
                                     <table align="center" border="0" cellspacing="0" cellpadding="0">
                                     <tr>
                                     <![endif]-->
-                                    
+
                                         <!--[if mso]>
                                         <td align="center" valign="top">
                                         <![endif]-->
-                                        
+
                                             <table align="left" border="0" cellpadding="0" cellspacing="0" class="mcnFollowStacked" style="display:inline;">
-                                                 
+
                                                 <tbody><tr>
                                                     <td align="center" valign="top" class="mcnFollowIconContent" style="padding-right:10px; padding-bottom:9px;">
                                                         <a href="https://www.instagram.com/spores_homes/?hl=en" target="_blank"><img src="https://cdn-images.mailchimp.com/icons/social-block-v2/color-instagram-96.png" alt="Instagram" class="mcnFollowBlockIcon" width="48" style="width:48px; max-width:48px; display:block;"></a>
                                                     </td>
                                                 </tr>
-                                                
-                                                
+
+
                                             </tbody></table>
-                                        
-                                        
+
+
                                         <!--[if mso]>
                                         </td>
                                         <![endif]-->
-                                    
+
                                         <!--[if mso]>
                                         <td align="center" valign="top">
                                         <![endif]-->
-                                        
+
                                             <table align="left" border="0" cellpadding="0" cellspacing="0" class="mcnFollowStacked" style="display:inline;">
-                                                 
+
                                                 <tbody><tr>
                                                     <td align="center" valign="top" class="mcnFollowIconContent" style="padding-right:0; padding-bottom:9px;">
                                                         <a href="https://www.linkedin.com/company/sporeshomes/" target="_blank"><img src="https://cdn-images.mailchimp.com/icons/social-block-v2/color-linkedin-96.png" alt="LinkedIn" class="mcnFollowBlockIcon" width="48" style="width:48px; max-width:48px; display:block;"></a>
                                                     </td>
                                                 </tr>
-                                                
-                                                
+
+
                                             </tbody></table>
-                                        
-                                        
+
+
                                         <!--[if mso]>
                                         </td>
                                         <![endif]-->
-                                    
+
                                     <!--[if mso]>
                                     </tr>
                                     </table>
@@ -788,7 +788,7 @@ If you think you should contribute to such social business to be&nbsp;sustainabl
                         </td>
                     </tr>
                 </tbody></table>
-<!--            
+<!--
                 <td class="mcnDividerBlockInner" style="padding: 18px;">
                 <hr class="mcnDividerContent" style="border-bottom-color:none; border-left-color:none; border-right-color:none; border-bottom-width:0; border-left-width:0; border-right-width:0; margin-top:0; margin-right:0; margin-bottom:0; margin-left:0;" />
 -->
@@ -803,15 +803,15 @@ If you think you should contribute to such social business to be&nbsp;sustainabl
         <table align="left" border="0" cellspacing="0" cellpadding="0" width="100%" style="width:100%;">
         <tr>
         <![endif]-->
-          
+
         <!--[if mso]>
         <td valign="top" width="600" style="width:600px;">
         <![endif]-->
                 <table align="left" border="0" cellpadding="0" cellspacing="0" style="max-width:100%; min-width:100%;" width="100%" class="mcnTextContentContainer">
                     <tbody><tr>
-                        
+
                         <td valign="top" class="mcnTextContent" style="padding-top:0; padding-right:18px; padding-bottom:9px; padding-left:18px;">
-                        
+
                             <em>Copyright © *|CURRENT_YEAR|* *|LIST:COMPANY|*, All rights reserved.</em><br>
 *|IFNOT:ARCHIVE_PAGE|* *|LIST:DESCRIPTION|*<br>
 <br>
@@ -828,7 +828,7 @@ You can <a href="*|UPDATE_PROFILE|*">update your preferences</a> or <a href="*|U
         <!--[if mso]>
         </td>
         <![endif]-->
-                
+
         <!--[if mso]>
         </tr>
         </table>
