--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -29,10 +29,13 @@
     });
   }
 </script> -->
-<div class = "banner">
+<!-- <div class = "banner">
 <iframe id="ytplayer" type="text/html" width="700" height="390"
   src="http://www.youtube.com/embed/_0iQZU_NUgc"
   frameborder="0"/> </iframe>
+</div> -->
+<div>
+  <h5 class="bit-space"> How was your experience at Spores ? </h5>
 </div>
 
 <div class="container" id="home-giders">
