update home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,11 @@
 <% content_for :title, "Spores - Well being and Learning Homes" %>
 
 
-<div class= "banner middle-pic" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://images.unsplash.com/photo-1469384631720-500a19caf2be?dpr=1&auto=compress,format&fit=crop&w=2850&h=&q=80&cs=tinysrgb&crop=');">
+<div class= "banner middle-pic" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://res.cloudinary.com/dk9kkvy1o/image/upload/v1568809884/d89121e7-8a41-4582-81b5-71f72a831bf8_2_bmrqmx.jpg');">
   <div class="banner-content">
     <h1></i>Spores Homes</h1>
-    <p class="big p"> Well being and Learning Homes </p>
-    <%= link_to "Find Spores Homes", flats_path, class: "btn btn-yours" %>
+    <p class="big p"> Coliving and Coworking Space </p>
+    <%= link_to "Start booking","http://www.spores-homes.com/flats/14", class: "btn btn-yours" %>
   </div>
 </div>
 
