fix home page button

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
   <div class="banner-content">
     <h1></i>Spores Homes</h1>
     <p class="big p"> Coliving and Coworking Space </p>
-    <%= link_to "Start booking","http://www.spores-homes.com/flats/14", class: "btn btn-yours" %>
+    <%= link_to "Start booking",'https://calendly.com/sporeshomes', class: "btn btn-yours" %>
   </div>
 </div>
 
