embedded insta and flipsnack

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -44,3 +44,11 @@
   margin-top: 25px;
   margin-bottom: 25px;
 }
+
+
+.testimonial2{
+    background: #fff;
+    text-align: center;
+    padding: 10px 10%;
+    border-radius: 5px;
+}
