--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -52,3 +52,11 @@
     padding: 10px 10%;
     border-radius: 5px;
 }
+
+.testimonial3{
+    background: #fff;
+    text-align: center;
+    padding: 10px 10%;
+    padding-top : 105px;
+    border-radius: 5px;
+}
