--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,11 +26,11 @@
 
     <meta name="google-site-verification" content="m5JoU1H2bwKIukYr_Iywmc6UKXfsPH6S_MH4QRYcEsg" />
 
-    <meta property="og:title" content="Spores Homes | Well Being and Self-learning homes">
+    <meta property="og:title" content="Spores Homes | Co-living & Co-working space">
     <meta property="og:type" content="article">
     <meta property="og:url" content="http://www.spores-homes.com/">
-    <meta property="og:image" content="http://res.cloudinary.com/dk9kkvy1o/image/upload/v1525972886/photo-146938463v1720-500a19caf2be_1_qtja6q.jpg">
-    <meta property="og:description" content="There are homes in the world that the key to enter is your personality, not your wallet. Discover the revolution of living.">
+    <meta property="og:image" content="https://res.cloudinary.com/dk9kkvy1o/image/upload/v1568809884/d89121e7-8a41-4582-81b5-71f72a831bf8_2_bmrqmx.jpg">
+    <meta property="og:description" content=" We are the first self-managed Co-living and Co-working space in Europe. We aim to be no impact home, being 0 waste and self-powered.">
     <meta property="og:site_name" content="Spores Homes ">
 
     <meta charset="UTF-8">
