--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<% content_for :title, "Spores - Well being and Learning Homes" %>
+<% content_for :title, "Spores - Co-living and Co-working Space" %>
 
 
 <div class= "banner middle-pic" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://res.cloudinary.com/dk9kkvy1o/image/upload/v1568809884/d89121e7-8a41-4582-81b5-71f72a831bf8_2_bmrqmx.jpg');">
